letter spacing added and previous total issue fixed

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ main {
 }
 .display {
     background: rgb(255, 255, 255);
+    letter-spacing: 0.12rem;
 
 }
 .keys {
